# fast-api-sample

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: main.py
