[project]
name = "fast-api-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]

[tool.ruff.lint]
select = [
    # https://docs.astral.sh/ruff/rules/
    "E",   # pycodestyle error
    "F",   # Pyflakes
    "N",   # pep8-naming
    "ANN", # flake8-annotations
]